fixed form alignment fixed footer

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,22 +16,23 @@ h3{
 }
 td,th{
     border:1px solid #063C5E;
-    border-collapse: collapse;
     height: 20px;
     min-width:fit-content;
     padding: 5px 10px;
+}
+table{
+    border-collapse: collapse;
 }
 tr:nth-child(odd){
     background-color: #C2C2C2;
 }
 form{
-    /* display: block; */
     text-align: right; 
-    width:100px;
+    width:50%;
     margin: 0 auto;
 }
 input [type=text]{
-    width:200px;
+    width:50%;
     position:relative;
     text-align: right;
 }
@@ -39,6 +40,9 @@ label{
     display:inline;
     margin:auto; 
     text-align: right;
+}
+textarea{
+    width:50%;
 }
 
 /* BODY */
